Fixed the nesting validation error with the <code> tag on the style-guide page.

--- a/citations.html
+++ b/citations.html
@@ -33,13 +33,13 @@
       <!-- // About the Citations -->
 
       <!-- // OTHER PAGES SECTION -->          
-      <section>
-        <h2 id="other_pages" class="subheading">Other Pages</h2>
-          <ul>
-            <li><span class="listitem"><a href="style-guide.html">Style Guide</a></span></li>
-            <li><span class="listitem"><a href="index.html">Site Homepage</a></span></li>
-          </ul>
-        </section>
+      <section id="other_pages">
+        <h2 class="subheading">Other Pages</h2>
+        <ul>
+          <li><span class="listitem"><a href="style-guide.html">Style Guide</a></span></li>
+          <li><span class="listitem"><a href="index.html">Site Homepage</a></span></li>
+        </ul>
+      </section>
       
       <!-- // OTHER PAGES SECTION -->        
 
