--- a/discontinued-styles.html
+++ b/discontinued-styles.html
@@ -27,15 +27,14 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <!-- About The Discontinued Styles -->
+      <section id="discontinued-styles">
+        
+        <!-- About The Discontinued Styles -->
+        <h1>Discontinued Styles</h1>
+        <p class="subheading">These are styles that ran over the past three months. You can't buy them anymore, but you can check them out and see how you like our work!</p>
+        <!-- // About The Discontinued Styles -->
 
-      <section id="past-styles">
-      <h1>Discontinued Styles</h1>
-      <p class="subheading">These are styles that ran over the past three months. You can't buy them anymore, but you can check them out and see how you like our work!</p>
-      <!-- // About The Discontinued Styles -->
-
-      <!-- Discontinued Styles -->
-      
+        <!-- Discontinued Styles -->
         <div class="grid-container">
           <div class="col-1of3">
             <figure class="product-listing">
