--- a/style-guide.html
+++ b/style-guide.html
@@ -242,15 +242,15 @@
               <p>.product-listing</p>
 
               <h4>Sample code:</h4>
-              <code>&lt;figure&gt;<br/>
-                <span class="indent">&lt;div class="product-listing"&gt;</span><br/>
+              <code>&lt;div class="product-listing"&gt;<br/>
+                <span class="indent">&lt;figure&gt;</span><br/>
                 <span class="indent-2">&lt;img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat."&gt;</span><br/>
                 <span class="indent-2">&lt;figcaption class="product-info"&gt;</span><br/>
                 <span class="indent-3">&lt;p class="product-name"&gt;Bike T-Shirt&lt;/p&gt;</span><br/>
                 <span class="indent-3">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
                 <span class="indent-2">&lt;/figcaption&gt;</span><br/>
-                <span class="indent">&lt;/div&gt;</span><br/>
-                &lt;/figure&gt;
+                <span class="indent">&lt;/figure&gt;</span><br/>
+                &lt;/div&gt;
               </code>
 
             <h4>Rendered element:</h4>
@@ -328,33 +328,33 @@
 
           <h4>Sample code:</h4>
           <code>&lt;div class="grid-container"&gt;<br/>
-            <span class="indent">&lt;figure class="col-1of3"&gt;</span><br/>
-              <span class="indent-2">&lt;div class="product-listing"&gt;</span><br/>
+            <span class="indent">&lt;div class="col-1of3"&gt;</span><br/>
+              <span class="indent-2">&lt;figure class="product-listing"&gt;</span><br/>
                 <span class="indent-3">&lt;img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat."&gt;</span><br/>
                 <span class="indent-3">&lt;figcaption class="product-info"&gt;</span><br/>
                   <span class="indent-4">&lt;p class="product-name"&gt;Bike T-Shirt&lt;/p&gt;</span><br/>
                   <span class="indent-4">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
                 <span class="indent-3">&lt;/figcaption&gt;</span><br/>
-              <span class="indent-2">&lt;/div&gt;</span><br/>
-            <span class="indent">&lt;/figure&gt;</span><br/>
-            <span class="indent">&lt;figure class="col-1of3"&gt;</span><br/>
-              <span class="indent-2">&lt;div class="product-listing"&gt;</span><br/>
+              <span class="indent-2">&lt;/figure&gt;</span><br/>
+            <span class="indent">&lt;/div&gt;</span><br/>
+            <span class="indent">&lt;div class="col-1of3"&gt;</span><br/>
+              <span class="indent-2">&lt;figure class="product-listing"&gt;</span><br/>
                 <span class="indent-3">&lt;img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food."&gt;</span><br/>
                 <span class="indent-3">&lt;figcaption class="product-info"&gt;</span><br/>
                   <span class="indent-4">&lt;p class="product-name"&gt;Mountain T-Shirt&lt;/p&gt;</span><br/>
                   <span class="indent-4">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
                 <span class="indent-3">&lt;/figcaption&gt;</span><br/>
-              <span class="indent-2">&lt;div class="product-listing"&gt;</span><br/>
-            <span class="indent">&lt;/figure&gt;</span><br/>
-            <span class="indent">&lt;figure class="col-1of3"&gt;</span><br/>
-              <span class="indent-2">&lt;div class="product-listing"&gt;</span><br/>
+              <span class="indent-2">&lt;figure class="product-listing"&gt;</span><br/>
+            <span class="indent">&lt;/div&gt;</span><br/>
+            <span class="indent">&lt;div class="col-1of3"&gt;</span><br/>
+              <span class="indent-2">&lt;figure class="product-listing"&gt;</span><br/>
                 <span class="indent-3">&lt;img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front."&gt;</span><br/>
                 <span class="indent-3">&lt;figcaption class="product-info"&gt;</span><br/>
                   <span class="indent-4">&lt;p class="product-name"&gt;Picnic T-Shirt&lt;/p&gt;</span><br/>
                   <span class="indent-4">&lt;p class="product-price"&gt;$24.99&lt;/p&gt;</span><br/>
                 <span class="indent-3">&lt;/figcaption&gt;</span><br/>
-              <span class="indent-2">&lt;div class="product-listing"&gt;</span><br/>
-            <span class="indent">&lt;/figure&gt;</span><br/>
+              <span class="indent-2">&lt;figure class="product-listing"&gt;</span><br/>
+            <span class="indent">&lt;/div&gt;</span><br/>
             &lt;/div&gt;<br/>
           </code>
 
@@ -466,55 +466,49 @@
 
             <h4>Sample code:</h4>
             <code>&lt;div class="cart-item"&gt;<br/>
-                <span class="indent">&lt;div class="cart-item-box"&gt;</span><br/>
-                  <span class="indent-2">&lt;img class="img-cart-view" src="http://placehold.it/160x160"&gt;</span><br/>
-                  <span class="indent-2">&lt;dl class="container"&gt;</span><br/>
-                    <span class="indent-3">&lt;div class="container-item"&gt;</span><br/>
-                      <span class="indent-4">&lt;dt&gt;Colour&lt;/dt&gt;</span><br/>
-                      <span class="indent-4">&lt;dd&gt;Red&lt;/dd&gt;</span><br/>
-                    <span class="indent-3">&lt;/div&gt;</span><br/>
-                    <span class="indent-3">&lt;div class="container-item"&gt;</span><br/>
-                      <span class="indent-4">&lt;dt&gt;Size&lt;/dt&gt;</span><br/>
-                      <span class="indent-4">&lt;dd&gt;XS&lt;/dd&gt;</span><br/>
-                    <span class="indent-3">&lt;/div&gt;</span><br/>
-                    <span class="indent-3">&lt;div class="container-item"&gt;</span><br/>
-                      <span class="indent-4">&lt;dt&gt;Quantity&lt;/dt&gt;</span><br/>
-                      <span class="indent-4">&lt;dd&gt;1&lt;/dd&gt;</span><br/>
-                    <span class="indent-3">&lt;/div&gt;</span><br/>
-                    <span class="indent-3">&lt;div class="container-item"&gt;</span><br/>
-                      <span class="indent-4">&lt;dt&gt;Price&lt;/dt&gt;</span><br/>
-                      <span class="indent-4">&lt;dd&gt;$29.99&lt;/dd&gt;</span><br/>
-                    <span class="indent-3">&lt;/div&gt;</span><br/>
-                  <span class="indent-2">&lt;/dl&gt;</span><br/>
-                <span class="indent">&lt;/div&gt;</span><br/>
-                <span class="indent">&lt;a class="button edit" href=""&gt;Edit&lt;/a&gt;</span><br/>
-                <span class="indent">&lt;a class="button delete" href=""&gt;Delete&lt;/a&gt;</span><br/>
-              &lt;/div&gt;</code>
+              <span class="indent">&lt;div class="cart-item-box"&gt;</span><br/>
+                <span class="indent-2">&lt;img class="img-cart-view" src="http://placehold.it/160x160" alt=""&gt;</span><br/>
+                <span class="indent-2">&lt;div class="container"&gt;</span><br/>
+                  <span class="indent-3">&lt;dl class="container-item"&gt;</span><br/>
+                    <span class="indent-4">&lt;dt&gt;Colour&lt;/dt&gt;</span><br/>
+                    <span class="indent-4">&lt;dd&gt;Blue&lt;/dd&gt;</span><br/>
+                  <span class="indent-3">&lt;/dl&gt;</span><br/>
+                  <span class="indent-3">&lt;dl class="container-item"&gt;</span><br/>
+                    <span class="indent-4">&lt;dt&gt;Size&lt;/dt&gt;</span><br/>
+                    <span class="indent-4">&lt;dd&gt;XS&lt;/dd&gt;</span><br/>
+                  <span class="indent-3">&lt;/dl&gt;</span><br/>
+                  <span class="indent-3">&lt;dl class="container-item"&gt;</span><br/>
+                    <span class="indent-4">&lt;dt&gt;Quantity&lt;/dt&gt;</span><br/>
+                    <span class="indent-4">&lt;dd&gt;1&lt;/dd&gt;</span><br/>
+                  <span class="indent-3">&lt;/dl&gt;</span><br/>
+                  <span class="indent-3">&lt;dl class="container-item"&gt;</span><br/>
+                    <span class="indent-4">&lt;dt&gt;Price&lt;/dt&gt;</span><br/>
+                    <span class="indent-4">&lt;dd&gt;$29.99&lt;/dd&gt;</span><br/>
+                  <span class="indent-3">&lt;/dl&gt;</span><br/>
+                <span class="indent-2">&lt;/div&gt;</span><br/>
+              <span class="indent">&lt;/div&gt;</span><br/>
+              <span class="indent">&lt;a class="button edit" href=""&gt;Edit&lt;/a&gt;</span><br/>
+              <span class="indent">&lt;a class="button delete" href=""&gt;Delete&lt;/a&gt;</span><br/>
+            &lt;/div&gt;</code>
 
             <h4>Rendered element:</h4>
             <div class="cart-item">
               <div class="cart-item-box">
                 <img class="img-cart-view" src="http://placehold.it/160x160" alt="">
-                <div class="container-item"> 
-                  <dl class="container">
+                <div class="container">
+                  <dl class="container-item">
                     <dt>Colour</dt>
-                    <dd>Red</dd>
+                    <dd>Blue</dd>
                   </dl>
-                </div>
-                <div class="container-item">
-                  <dl class="container">
+                  <dl class="container-item">
                     <dt>Size</dt>
                     <dd>XS</dd>
                   </dl>
-                </div>
-                <div class="container-item">
-                  <dl class="container">
+                  <dl class="container-item">
                     <dt>Quantity</dt>
                     <dd>1</dd>
                   </dl>
-                </div>
-                <div class="container-item">
-                  <dl class="container">
+                  <dl class="container-item">
                     <dt>Price</dt>
                     <dd>$29.99</dd>
                   </dl>
@@ -675,13 +669,13 @@
             <code>&lt;footer&gt;<br/>
               <span class="indent">&lt;img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle."&gt;</span><br/>
               <span class="indent">&lt;div class="vcard"&gt;</span><br/>
-                <span class="indent-2">&lt;p&gt; &lt;span class="fn"&gt;&lt;strong&gt;&copy;2015 Fit To A Tee&lt;/strong&gt;&lt;/span&gt;&lt;br/&gt;<span><br/>
+                <span class="indent-2">&lt;p&gt; &lt;span class="fn"&gt;&lt;strong&gt;&copy;2015 Fit To A Tee&lt;/strong&gt;&lt;/span&gt;&lt;br/&gt;</span><br/>
                 <span class="indent-2">&lt;span class="adr"&gt;&lt;span class="street-address"&gt;125 Main Street&lt;/span&gt;, &lt;span class="region"&gt;Vancouver, BC&lt;/span&gt;, &lt;span class="postal-code"&gt;V9W 5O8&lt;/span&gt;&lt;/span&gt;&lt;/p&gt;</span><br/>
-                <span class="indent-2">&lt;p&gt;&lt;span class="tel"&gt;(604) 271 9202&lt;/span&gt;&lt;br/&gt;<span><br/>
+                <span class="indent-2">&lt;p&gt;&lt;span class="tel"&gt;(604) 271 9202&lt;/span&gt;&lt;br/&gt;</span><br/>
                 <span class="indent-2">&lt;span class="email"&gt;&lt;a href="mailto:info@fittoatee.com"&gt;info@fittoatee.com&lt;/a&gt;&lt;/span&gt;&lt;/p&gt;</span><br/>
                 <span class="indent-2">&lt;p&gt;Brendan Lane and Shengting Hu&lt;/p&gt;</span><br/>
               <span class="indent">&lt;/div&gt;</span><br/>
-              &lt;/footer&gt; </code>
+            &lt;/footer&gt;</code>
 
             <h4>Rendered element:</h4>
             <footer>
