--- a/current-item-mountain.html
+++ b/current-item-mountain.html
@@ -71,6 +71,8 @@
                 </select>
               </div>
             </div>
+            <p>Not sure what size you are? Check out our <a href="size-guide.html">sizing guide</a>!</p>
+
             <a class="button submit" href="checkout.html">Add To Cart</a>
           </form>
         </div>
